// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4077,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4077,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "size": 265,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4077,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4077,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "main.27cbd0a71f6476e80306.js",
    5896,
    Object {
      "chunkhash": "27cbd0a71f6476e80306",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.27cbd0a71f6476e80306.js.gz",
      },
      "size": 5896,
    },
  ],
  Array [
    "main.27cbd0a71f6476e80306.js.gz",
    1608,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1608,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
      },
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
    20,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 20,
    },
  ],
  Array [
    "main.27cbd0a71f6476e80306.js",
    5896,
    Object {
      "chunkhash": "27cbd0a71f6476e80306",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.27cbd0a71f6476e80306.js.gz",
      },
      "size": 5896,
    },
  ],
  Array [
    "main.27cbd0a71f6476e80306.js.gz",
    1608,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1608,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: warnings 1`] = `Array []`;
